<resources>
    <string name="app_name">ProHome</string>
    <string name="feels_like_32">Feels like 32</string>
    <string name="_27">27</string>
    <string name="tonight">Tonight</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="prohome">ProHome</string>
    <string name="energy">Energy</string>
    <string name="_16_4_kwh">16.4 kwh</string>
    <string name="_3_device_turn_on">3 Device Turn On</string>
    <string name="devices">Devices</string>
    <string name="light">Light</string>
    <string name="x3_devices">x3 Devices</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_1">Hello fragment 1</string>
    <string name="fragment_2">Hello fragment 2</string>
</resources>