<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/primary"
    android:padding="12dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboardIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/weatherStatus"
        tools:ignore="MissingConstraints"
        app:cardBackgroundColor="@color/secondary">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_dash"
            android:layout_gravity="center"
            app:tint="@color/white"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/accountIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="5.20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/weatherStatus"
        app:layout_constraintStart_toEndOf="@id/textTitle"
        tools:ignore="MissingConstraints"
        app:cardBackgroundColor="@color/secondary">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_account"
            android:layout_gravity="center"
            app:tint="@color/white"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/prohome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/dashboardIcon"
        app:layout_constraintEnd_toStartOf="@id/accountIcon"
        app:layout_constraintStart_toEndOf="@id/dashboardIcon"
        app:layout_constraintTop_toTopOf="@+id/dashboardIcon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/weatherStatus"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/secondary"
        app:cardCornerRadius="40dp"
        />

<!--    <androidx.constraintlayout.helper.widget.Flow-->
<!--        android:id="@+id/flow"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="180dp"-->
<!--        android:layout_marginStart="4dp"-->
<!--        android:layout_marginEnd="4dp"-->
<!--        app:constraint_referenced_ids="weatherStatus1, weatherStatus2"-->
<!--        app:flow_horizontalGap="8dp"-->
<!--        app:flow_maxElementsWrap="2"-->
<!--        app:flow_verticalGap="8dp"-->
<!--        app:flow_wrapMode="aligned"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        app:layout_constraintTop_toTopOf="@id/weatherStatus"-->
<!--        app:layout_constraintTop_toBottomOf="@id/weatherStatus"/>-->

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/weatherStatus1"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cardCornerRadius="16dp"-->
<!--        app:cardUseCompatPadding="true"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150dp"-->
<!--            android:orientation="vertical"-->
<!--            android:background="@color/secondary">-->

<!--            <ImageView-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:src="@drawable/ic_thunderstorm"-->
<!--                android:layout_gravity="center"-->
<!--                app:tint="@color/yellow" />-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/heavy_rain"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="24sp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/tonight"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="16sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </androidx.cardview.widget.CardView>-->

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/weatherStatus2"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cardCornerRadius="16dp"-->
<!--        app:cardUseCompatPadding="true"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150dp"-->
<!--            android:orientation="vertical"-->
<!--            android:background="@color/secondary">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/_27"-->
<!--                android:textSize="60sp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/white"-->
<!--                android:id="@+id/wfNumber"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/degreeNum"-->
<!--                android:text="@string/o"-->
<!--                android:textColor="@color/white"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="30sp"-->
<!--                app:layout_constraintTop_toTopOf="@id/wfNumber"-->
<!--                app:layout_constraintStart_toEndOf="@+id/wfNumber"-->
<!--                android:layout_marginTop="5dp"-->
<!--                />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/feels_like_32"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="16sp"-->
<!--                android:id="@+id/wfSubLabel"-->
<!--                app:layout_constraintStart_toStartOf="@+id/wfNumber"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/wfNumber" />-->

<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:src="@drawable/ic_rain"-->
<!--                app:layout_constraintTop_toBottomOf="@id/wfSubLabel"-->
<!--                android:scaleType="center"/>-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </androidx.cardview.widget.CardView>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/energy"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:layout_constraintTop_toBottomOf="@+id/weatherStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/devices"

        android:layout_marginTop="24dp"
        app:cardCornerRadius="36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient1"
            android:padding="24dp">

            <TextView
                android:id="@+id/label1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/energy"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lines="1"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/energyIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/label2"
                />

            <TextView
                android:id="@+id/label2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_16_4_kwh"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/energyIcon"
                app:layout_constraintTop_toBottomOf="@id/label1"
                app:layout_constraintBottom_toTopOf="@id/label3"
                />

            <TextView
                android:id="@+id/label3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_3_device_turn_on"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/energyIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label2"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:id="@+id/energyIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lightning_icon"
                    app:tint="@color/card_inside" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/devices"
        android:text="@string/devices"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/energy"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/deviceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25"
        android:textSize="18sp"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/devices"
        app:layout_constraintStart_toEndOf="@id/devices"
        app:layout_constraintTop_toBottomOf="@id/devices"
        app:layout_constraintTop_toTopOf="@id/devices"
        android:layout_marginStart="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deviceListRecyclarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/devices"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        android:tint="@color/white"
        android:backgroundTint="@color/floating_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/imageAccount"
        android:src="@drawable/ic_home"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@id/fabAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fabAdd"
        app:tint="@color/white" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/imageSetting"
        android:src="@drawable/ic_setting"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/fabAdd"
        app:layout_constraintTop_toTopOf="@id/fabAdd"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>